--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --host"
+    "preview": "vite build; vite preview --host",
+    "deploy": "gh-pages -d dist"  // Agregado el script para el despliegue en GitHub Pages
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.26.0",
-    "shoppingcart": "file:"
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -25,7 +24,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "gh-pages": "^6.1.1",
-    "vite": "^5.4.0"
+    "gh-pages": "^6.3.0",
+    "pagina": "^1.0.0",
+    "vite": "^5.2.0"
   }
 }
