--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "gh-pages": "^6.3.0",
     "pagina": "^1.0.0",
     "vite": "^5.2.0"
+  },
+  "scripts": {
+    "build": "vite build",
+    "deploy": "pagina -d dist"
   }
+
 }
